# ackmerann_nlmpc-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  setup.py  tracks.yaml
ackermann_nlmpc/: CHANGELOG.rst  ackermann_nlmpc_node.py  package.xml  setup.cfg  setup.py
ackermann_nlmpc/ackermann_nlmpc/: ackermann_nlmpc_node.py  ackermann_sim_node.py  trajectory_converter_node.py  utils.py
ackermann_nlmpc/codegen/: autompc_ros.c
ackermann_nlmpc/examples/: circ_backward.py  park_backward.py  park_forward.py
ackermann_nlmpc/launch/: ackermann_nlmpc.launch.py
ackermann_nlmpc_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ackermann_nlmpc_msgs/msg/: Trajectory.msg  TrajectoryNode.msg
debian/: changelog  control  copyright  gbp.conf  rules
examples/: circ_forward.py
rpm/: ros-jazzy-ackermann-nlmpc-msgs.spec  ros-jazzy-ackermann-nlmpc.spec  ros-kilted-ackermann-nlmpc.spec  ros-lyrical-ackermann-nlmpc.spec  ros-rolling-ackermann-nlmpc-msgs.spec  ros-rolling-ackermann-nlmpc.spec  template.spec
